--- a/app/src/main/res/layouts/patient_layouts/layout/activity_edit_patient_profile.xml
+++ b/app/src/main/res/layouts/patient_layouts/layout/activity_edit_patient_profile.xml
@@ -1,168 +1,267 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
+        android:layout_margin="5dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/image_iv"
-            android:layout_gravity="center_horizontal"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:src="@drawable/patient"/>
-        <Button
-            android:layout_gravity="center"
-            android:id="@+id/profile_image_upload_btn"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:imeOptions="actionNext"
-            android:text="Upload"/>
-        <EditText
-            android:id="@+id/profile_full_name_et"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:maxLines="1"
-            android:inputType="text"
-            android:imeOptions="actionNext"
-            android:hint="Full Name"/>
-        <EditText
-            android:id="@+id/profile_father_name_et"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:maxLines="1"
-            android:inputType="text"
-            android:imeOptions="actionNext"
-            android:hint="Father's Name"/>
-        <EditText
-            android:id="@+id/profile_mother_name_et"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:maxLines="1"
-            android:inputType="text"
-            android:imeOptions="actionNext"
-            android:hint="Mother's Name"/>
-        <EditText
-            android:id="@+id/profile_contact_number_et"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:maxLines="1"
-            android:inputType="phone"
-            android:imeOptions="actionNext"
-            android:hint="Contact Number"/>
         <LinearLayout
+            android:background="@drawable/button_background_1"
+            android:visibility="visible"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="horizontal">
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="Birth Date "
-                android:textSize="20sp"/>
-            <EditText
-                android:id="@+id/profile_birth_date_et"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:maxLines="1"
-                android:inputType="date"
-                android:imeOptions="actionNext"
-                android:hint="Date"/>
-            <EditText
-                android:id="@+id/profile_birth_month_et"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:maxLines="1"
-                android:inputType="date"
-                android:imeOptions="actionNext"
-                android:hint="Month"/>
-            <EditText
-                android:id="@+id/profile_birth_year_et"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:maxLines="1"
-                android:inputType="date"
-                android:imeOptions="actionDone"
-                android:hint="Year"/>
-        </LinearLayout>
-        <RadioGroup
-            android:id="@+id/profile_gender_group"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="Gender"
-                android:textSize="20sp"/>
-            <RadioButton
-                android:id="@+id/profile_male_rbtn"
-                android:checked="true"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="Male"/>
-            <RadioButton
-                android:id="@+id/profile_female_rbtn"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="Female"/>
-        </RadioGroup>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:orientation="horizontal">
-            <TextView
-                android:gravity="center"
-                android:background="@color/colorPrimary"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:text="Blood Group"
-                android:textSize="25sp"/>
-            <Spinner
-                android:id="@+id/profile_blood_group_spinner"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:entries="@array/blood_group"/>
-        </LinearLayout>
-        <LinearLayout
-            android:id="@+id/profile_address_google_location_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <EditText
-                android:textColor="@color/colorGreen"
-                android:gravity="center"
-                android:background="#FFFFFF"
-                android:enabled="false"
-                android:id="@+id/profile_address_manual_location_et"
-                android:layout_weight="9"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="For more precession click the GPS button"
-                android:textSize="20sp"/>
-            <ImageView
-                android:background="#000000"
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/image_civ"
+                android:contentDescription="@string/Upload"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
                 android:layout_gravity="center"
-                android:id="@+id/profile_address_google_location_iv"
-                android:layout_weight="1"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/location_1" />
+                android:src="@drawable/male_doc"/>
+            <LinearLayout
+                android:background="@drawable/button_background_1"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:orientation="vertical"
+                android:gravity="bottom">
+                <TextView
+                    android:background="@drawable/button_background_1"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:text="@string/profile_image"
+                    android:gravity="center"
+                    android:textSize="22sp"
+                    android:textColor="@color/colorGreen"/>
+                <Button
+                    android:id="@+id/upload_btn"
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:layout_height="0dp"
+                    android:text="@string/Upload"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:gravity="center"
+                    android:background="@drawable/button_background_1"
+                    android:textAllCaps="false"
+                    android:drawableEnd="@drawable/upload"/>
+
+                <Button
+                    android:id="@+id/cancel_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:layout_gravity="bottom"
+                    android:background="@drawable/button_background_1"
+                    android:drawableEnd="@drawable/cancel"
+                    android:gravity="center"
+                    android:text="@string/Cancel"
+                    android:textColor="@color/colorRed"
+                    android:textAllCaps="false" />
+            </LinearLayout>
         </LinearLayout>
-        <Button
-            android:id="@+id/profile_save_btn"
+        <TextView
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Save"/>
+            android:text="@string/Basic_Information"
+            android:textSize="25sp"
+            android:textColor="@color/colorGreen"
+            android:gravity="center"
+            android:textAllCaps="true"
+            android:textStyle="bold"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/Full_Name"
+            android:textColor="#000000"
+            android:labelFor="@id/full_name_et"
+            android:textSize="20sp"/>
+        <EditText
+            android:imeOptions="actionNext"
+            android:importantForAutofill="no"
+            android:id="@+id/full_name_et"
+            android:inputType="textCapWords"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/edit_text_box"
+            android:paddingStart="10dp"
+            android:paddingEnd="0dp" tools:targetApi="o" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/Father_Name"
+            android:textColor="#000000"
+            android:textSize="20sp"/>
+        <EditText
+            android:imeOptions="actionNext"
+            android:labelFor="@id/father_name_et"
+            android:importantForAutofill="no"
+            android:id="@+id/father_name_et"
+            android:inputType="textCapWords"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/edit_text_box"
+            android:paddingStart="10dp"
+            android:paddingEnd="0dp" tools:targetApi="o" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/Mother_Name"
+            android:textColor="#000000"
+            android:textSize="20sp"/>
+        <EditText
+            android:imeOptions="actionNext"
+            android:importantForAutofill="no"
+            android:labelFor="@id/mother_name_et"
+            android:id="@+id/mother_name_et"
+            android:inputType="textCapWords"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingStart="10dp"
+            android:paddingEnd="0dp"
+            android:background="@drawable/edit_text_box" tools:targetApi="o" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/Phone_Number"
+            android:textColor="#000000"
+            android:textSize="20sp"/>
+        <EditText
+            android:imeOptions="actionDone"
+            android:labelFor="@id/phone_et"
+            android:id="@+id/phone_et"
+            android:inputType="phone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/edit_text_box"
+            android:paddingStart="10dp"
+            android:paddingEnd="0dp"
+            android:importantForAutofill="no" tools:targetApi="o" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/Blood_Group"
+            android:textColor="#000000"
+            android:textSize="20sp"/>
+        <Spinner
+            android:id="@+id/blood_group_spinner"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:entries="@array/blood_group"
+            android:background="@drawable/drop_down_spinner"
+            android:paddingStart="10dp"
+            android:paddingEnd="0dp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/Date_Of_Birth"
+            android:textColor="#000000"
+            android:textSize="20sp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:background="@drawable/edit_text_box"
+                android:visibility="gone"
+                android:id="@+id/date_of_birth_tv"
+                android:layout_weight="10"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:paddingStart="10dp"
+                android:paddingEnd="0dp"
+                android:textSize="18sp"
+                android:hint="@string/example_date"
+                android:textColor="#000000"/>
+            <ImageView
+                android:background="@drawable/edit_text_box"
+                android:id="@+id/date_of_birth_btn_iv"
+                android:contentDescription="@string/Date_Of_Birth"
+                android:layout_weight="1"
+                android:layout_width="25dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:src="@drawable/calender_1"/>
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/Current_Address"
+            android:textColor="#000000"
+            android:textSize="20sp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/address_et"
+                android:visibility="gone"
+                android:autofillHints="@string/example_address"
+                android:background="@drawable/edit_text_box"
+                android:gravity="center"
+                android:inputType="textCapWords"
+                android:layout_weight="10"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:paddingStart="10dp"
+                android:paddingEnd="0dp"
+                android:textSize="18sp"
+                android:hint="@string/example_address"
+                android:textColor="#000000" tools:targetApi="o"/>
+            <ImageView
+                android:background="@drawable/edit_text_box"
+                android:id="@+id/address_btn_iv"
+                android:contentDescription="@string/Date_Of_Birth"
+                android:layout_weight="1"
+                android:layout_width="25dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:src="@drawable/location"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/I_Am_A"
+                android:textColor="#000000"
+                android:textSize="20sp"/>
+            <RadioGroup
+                android:id="@+id/radio_group"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <RadioButton
+                    android:id="@+id/male_rbtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="true"
+                    android:text="@string/Male"
+                    android:textSize="20sp" />
+                <RadioButton
+                    android:id="@+id/female_rbtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="20sp"
+                    android:text="@string/Female"/>
+            </RadioGroup>
+        </LinearLayout>
+        <Button
+            android:background="@drawable/button_background_3"
+            android:id="@+id/save_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/Save"
+            android:textSize="22sp"/>
     </LinearLayout>
 </ScrollView>
