--- a/app/src/main/res/layouts/patient_layouts/layout/activity_edit_patient_secure_info.xml
+++ b/app/src/main/res/layouts/patient_layouts/layout/activity_edit_patient_secure_info.xml
@@ -8,37 +8,52 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
         <TextView
-            android:textColor="#000000"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
+            android:fontFamily="monospace"
+            android:gravity="center"
             android:text="Provide your information carefully.It can't be re-editable unless we found wrong !"
-            android:gravity="center"/>
-        <TextView
             android:textColor="#000000"
+            android:textSize="20sp" />
+
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
+            android:fontFamily="monospace"
+            android:gravity="center"
             android:text="Provide your birth certificate information"
-            android:gravity="center"/>
+            android:textColor="#000000"
+            android:textSize="20sp" />
         <EditText
             android:id="@+id/bn_et"
+            android:background="@drawable/button_background_1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="45dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="0dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
             android:imeOptions="actionDone"
             android:hint="Birth Certificate Number"/>
         <ImageView
+            android:background="@drawable/button_background_1"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
             android:id="@+id/image_view_1"
             android:layout_width="200dp"
             android:layout_height="200dp"
-            android:layout_gravity="center"
-            android:src="@color/colorRed"/>
+            android:layout_gravity="center" />
         <Button
+            android:background="@drawable/button_background_2"
             android:id="@+id/bn_photo_upload_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Birth certificate photo"/>
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:text="Upload Birth certificate photo"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -47,20 +62,29 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="monospace"
+                android:textColor="@color/colorRed"
                 android:text="This birth certificate number encountered a problem\nPlease upload another document like NID/Passport/Educational Document that we can verify that it is you."/>
             <ImageView
                 android:id="@+id/image_view_2"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
-                android:src="@color/colorRed"
+                android:background="@drawable/button_background_1"
                 android:layout_gravity="center"/>
             <Button
+                android:layout_marginTop="5dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:background="@drawable/button_background_2"
                 android:id="@+id/upload_another_doc_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Upload another valid document"/>
         </LinearLayout>
         <Button
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:background="@drawable/button_background_1"
             android:id="@+id/confirm_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
