--- a/app/src/main/res/layouts/doctor_layouts/layout/activity_edit_doctor_profile.xml
+++ b/app/src/main/res/layouts/doctor_layouts/layout/activity_edit_doctor_profile.xml
@@ -1,107 +1,207 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <androidx.cardview.widget.CardView
-            android:layout_gravity="center"
-            android:layout_width="200dp"
+        <FrameLayout
+            android:layout_width="match_parent"
             android:layout_height="200dp">
 
             <ImageView
-                android:id="@+id/doctor_profile_iv"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:layout_gravity="center"
-                android:src="@drawable/male_doc" />
-
-            <Button
-                android:background="@color/colorWhite"
-                android:layout_gravity="bottom|right"
-                android:id="@+id/doctor_profile_upload_btn"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:text="Choose"
-                android:drawableRight="@drawable/upload_image_icon"
-                android:textAllCaps="false" />
-        </androidx.cardview.widget.CardView>
-        <LinearLayout
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"
+                android:contentDescription="@string/profile_image"
+                android:src="@drawable/medical_image_1" />
+            <RelativeLayout
+                android:layout_gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="200dp">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/image_view_0"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_centerInParent="true"
+                    android:layout_margin="2dp"
+                    android:src="@drawable/male_doc"/>
+
+                <TextView
+                    android:id="@+id/tex_view_0"
+                    android:layout_width="wrap_content"
+                    android:layout_height="134dp"
+                    android:layout_gravity="right"
+                    android:layout_marginLeft="-24dp"
+                    android:layout_toRightOf="@id/image_view_0"
+                    android:drawableStart="@drawable/image_chooser_2"
+                    android:fontFamily="serif-monospace"
+                    android:gravity="center"
+                    android:text="@string/upload_profile_image"
+                    android:textColor="#FFEB3B"
+                    android:textSize="25sp"
+                    android:textStyle="bold" />
+
+            </RelativeLayout>
+        </FrameLayout>
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <EditText
-                android:imeOptions="actionNext"
-                android:id="@+id/doctor_name_title_et"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="DR."/>
-            <EditText
-                android:imeOptions="actionNext"
-                android:id="@+id/doctor_name_et"
-                android:layout_weight="3"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:hint="Full Name"/>
-        </LinearLayout>
+            android:text="@string/basic_account_information_tv"
+            android:textSize="30sp"
+            android:textColor="#000000"
+            android:gravity="center"/>
+        <TextView
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/Full_Name"
+            android:textSize="22sp"
+            android:textColor="#000000"/>
         <EditText
+            android:id="@+id/edit_text_1"
+            android:selectAllOnFocus="true"
+            android:inputType="textCapWords"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/edit_text_box"
             android:imeOptions="actionNext"
-            android:id="@+id/doctor_studied_clg_et"
+            android:autofillHints="@string/Full_Name"
+            android:hint="@string/type_your_name_here_hint"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Graduation completed college name"/>
+            tools:targetApi="o" />
+        <TextView
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/mbbs_completion_institute_name_tv"
+            android:textSize="22sp"
+            android:textColor="#000000"/>
         <EditText
+            android:id="@+id/edit_text_2"
+            android:inputType="textCapWords"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/edit_text_box"
             android:imeOptions="actionNext"
-            android:id="@+id/doctor_degree_et"
+            android:autofillHints="@string/mbbs_completion_institute_name_tv"
+            android:hint="@string/name_of_the_institute_hint"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Degree"/>
+            tools:targetApi="o"/>
+        <TextView
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/passing_year_tv"
+            android:textSize="22sp"
+            android:textColor="#000000"/>
         <EditText
+            android:id="@+id/edit_text_3"
+            android:inputType="number"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/edit_text_box"
             android:imeOptions="actionNext"
-            android:id="@+id/doctor_no_of_year_prac_et"
+            android:autofillHints="@string/passing_year"
+            android:hint="@string/passing_year"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="No of year practicing"/>
+            tools:targetApi="o"/>
+        <TextView
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/completed_degree"
+            android:textSize="22sp"
+            android:textColor="#000000"/>
         <EditText
+            android:id="@+id/edit_text_4"
+            android:inputType="textCapCharacters"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/edit_text_box"
             android:imeOptions="actionNext"
-            android:id="@+id/profile_contact_number_et"
+            android:autofillHints="@string/mbbs_fcps_etc_hint"
+            android:hint="@string/mbbs_fcps_etc_hint"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Contact number"/>
+            tools:targetApi="o"/>
+        <TextView
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/no_of_practicing_year_tv"
+            android:textSize="22sp"
+            android:textColor="#000000"/>
         <EditText
-            android:imeOptions="actionDone"
-            android:id="@+id/available_area_et"
+            android:id="@+id/edit_text_5"
+            android:inputType="number"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/edit_text_box"
+            android:imeOptions="actionNext"
+            android:autofillHints="@string/no_of_practicing_year"
+            android:hint="@string/no_of_practicing_year"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Available Area"/>
-        <LinearLayout
+            tools:targetApi="o"/>
+        <TextView
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <EditText
-                android:imeOptions="actionDone"
-                android:hint="Select specialization"
-                android:layout_weight="4"
-                android:id="@+id/doctor_category_et"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"/>
-            <Button
-                android:id="@+id/doctor_category_select_btn"
-                android:text="Select"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
+            android:text="@string/contact_number_tv"
+            android:textSize="22sp"
+            android:textColor="#000000"/>
+        <EditText
+            android:autofillHints="@string/contact_number"
+            android:id="@+id/edit_text_6"
+            android:inputType="phone"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/edit_text_box"
+            android:imeOptions="actionNext"
+            android:hint="@string/contact_number"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:targetApi="o"/>
+        <TextView
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/available_area"
+            android:textSize="22sp"
+            android:textColor="#000000"/>
+        <Spinner
+            android:id="@+id/spinner_1"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/drop_down_spinner"
+            android:imeOptions="actionNext"
+            android:entries="@array/division_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
         <Button
-            android:id="@+id/doctor_next_page_btn"
+            android:id="@+id/button_0"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/button_background_1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Next"/>
+            android:text="@string/Next"/>
     </LinearLayout>
 </ScrollView>
