--- a/app/src/main/res/layouts/patient_layouts/layout/activity_edit_patient_secure_info.xml
+++ b/app/src/main/res/layouts/patient_layouts/layout/activity_edit_patient_secure_info.xml
@@ -1,33 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="monospace"
+            android:text="@string/birth_certificate_hint_text_1"
+            android:textColor="@color/colorRed"
             android:gravity="center"
-            android:text="Provide your information carefully.It can't be re-editable unless we found wrong !"
-            android:textColor="#000000"
-            android:textSize="20sp" />
+            android:textSize="20sp"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="monospace"
             android:gravity="center"
-            android:text="Provide your birth certificate information"
+            android:text="@string/birth_certificate_hint_text_2"
             android:textColor="#000000"
             android:textSize="20sp" />
         <EditText
-            android:id="@+id/bn_et"
+            android:id="@+id/edit_text_1"
+            android:autofillHints="@string/birth_certificat_hint_et"
+            android:inputType="number"
             android:background="@drawable/button_background_1"
             android:layout_width="match_parent"
             android:layout_height="45dp"
@@ -37,24 +39,27 @@
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
             android:imeOptions="actionDone"
-            android:hint="Birth Certificate Number"/>
+            android:hint="@string/birth_certificat_hint_et"
+            tools:targetApi="o" />
         <ImageView
             android:background="@drawable/button_background_1"
+            android:contentDescription="@string/birth_certificate_hint_text_2"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
-            android:id="@+id/image_view_1"
+            android:id="@+id/image_view_0"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_gravity="center" />
         <Button
             android:background="@drawable/button_background_2"
-            android:id="@+id/bn_photo_upload_btn"
+            android:id="@+id/button_0"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
-            android:text="Upload Birth certificate photo"/>
+            android:text="@string/upload_birth_certificate_hint_btn"/>
         <LinearLayout
+            android:visibility="visible"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/report_section"
@@ -64,30 +69,32 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="monospace"
                 android:textColor="@color/colorRed"
-                android:text="This birth certificate number encountered a problem\nPlease upload another document like NID/Passport/Educational Document that we can verify that it is you."/>
+                android:text="@string/another_document_hint_tv"/>
             <ImageView
-                android:id="@+id/image_view_2"
+                android:id="@+id/image_view_1"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
                 android:background="@drawable/button_background_1"
-                android:layout_gravity="center"/>
+                android:layout_gravity="center"
+                android:contentDescription="@string/aanother_document_image_hint"/>
             <Button
                 android:layout_marginTop="5dp"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
                 android:background="@drawable/button_background_2"
-                android:id="@+id/upload_another_doc_btn"
+                android:id="@+id/button_1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Upload another valid document"/>
+                android:text="@string/another_document_btn_hint"/>
         </LinearLayout>
         <Button
+            android:layout_marginTop="5dp"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
             android:background="@drawable/button_background_1"
-            android:id="@+id/confirm_btn"
+            android:id="@+id/button_2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Confirm"/>
+            android:text="@string/confirm_btn"/>
     </LinearLayout>
 </ScrollView>
