--- a/app/src/main/res/layouts/patient_layouts/layout/activity_edit_patient_profile.xml
+++ b/app/src/main/res/layouts/patient_layouts/layout/activity_edit_patient_profile.xml
@@ -7,60 +7,46 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-        <LinearLayout
-            android:background="@drawable/button_background_1"
-            android:visibility="visible"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/image_civ"
-                android:contentDescription="@string/Upload"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:layout_gravity="center"
-                android:src="@drawable/male_doc"/>
-            <LinearLayout
-                android:background="@drawable/button_background_1"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:orientation="vertical"
-                android:gravity="bottom">
-                <TextView
-                    android:background="@drawable/button_background_1"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:text="@string/profile_image"
-                    android:gravity="center"
-                    android:textSize="22sp"
-                    android:textColor="@color/colorGreen"/>
-                <Button
-                    android:id="@+id/upload_btn"
-                    android:layout_width="match_parent"
-                    android:layout_weight="1"
-                    android:layout_height="0dp"
-                    android:text="@string/Upload"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:gravity="center"
-                    android:background="@drawable/button_background_1"
-                    android:textAllCaps="false"
-                    android:drawableEnd="@drawable/upload"/>
+            android:layout_height="200dp">
 
-                <Button
-                    android:id="@+id/cancel_btn"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:layout_gravity="bottom"
-                    android:background="@drawable/button_background_1"
-                    android:drawableEnd="@drawable/cancel"
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"
+                android:contentDescription="@string/profile_image"
+                android:src="@drawable/medical_image_1" />
+            <RelativeLayout
+                android:layout_gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="200dp">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/image_civ_0"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_centerInParent="true"
+                    android:layout_margin="2dp"
+                    android:src="@drawable/male_doc"/>
+
+                <TextView
+                    android:id="@+id/text_view_0"
+                    android:layout_width="wrap_content"
+                    android:layout_height="134dp"
+                    android:layout_gravity="right"
+                    android:layout_marginLeft="-24dp"
+                    android:layout_toRightOf="@id/image_civ_0"
+                    android:drawableStart="@drawable/image_chooser_2"
+                    android:fontFamily="serif-monospace"
                     android:gravity="center"
-                    android:text="@string/Cancel"
-                    android:textColor="@color/colorRed"
-                    android:textAllCaps="false" />
-            </LinearLayout>
-        </LinearLayout>
+                    android:text="@string/upload_profile_image"
+                    android:textColor="#FFEB3B"
+                    android:textSize="25sp"
+                    android:textStyle="bold" />
+
+            </RelativeLayout>
+        </FrameLayout>
         <TextView
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
@@ -77,12 +63,12 @@
             android:layout_height="wrap_content"
             android:text="@string/Full_Name"
             android:textColor="#000000"
-            android:labelFor="@id/full_name_et"
+            android:labelFor="@id/edit_text_0"
             android:textSize="20sp"/>
         <EditText
             android:imeOptions="actionNext"
             android:importantForAutofill="no"
-            android:id="@+id/full_name_et"
+            android:id="@+id/edit_text_0"
             android:inputType="textCapWords"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -97,9 +83,9 @@
             android:textSize="20sp"/>
         <EditText
             android:imeOptions="actionNext"
-            android:labelFor="@id/father_name_et"
+            android:labelFor="@id/edit_text_1"
             android:importantForAutofill="no"
-            android:id="@+id/father_name_et"
+            android:id="@+id/edit_text_1"
             android:inputType="textCapWords"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -115,8 +101,8 @@
         <EditText
             android:imeOptions="actionNext"
             android:importantForAutofill="no"
-            android:labelFor="@id/mother_name_et"
-            android:id="@+id/mother_name_et"
+            android:labelFor="@id/edit_text_2"
+            android:id="@+id/edit_text_2"
             android:inputType="textCapWords"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -131,8 +117,8 @@
             android:textSize="20sp"/>
         <EditText
             android:imeOptions="actionDone"
-            android:labelFor="@id/phone_et"
-            android:id="@+id/phone_et"
+            android:labelFor="@id/edit_text_3"
+            android:id="@+id/edit_text_3"
             android:inputType="phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -147,7 +133,7 @@
             android:textColor="#000000"
             android:textSize="20sp"/>
         <Spinner
-            android:id="@+id/blood_group_spinner"
+            android:id="@+id/spinner_0"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:entries="@array/blood_group"
@@ -167,7 +153,7 @@
             <TextView
                 android:background="@drawable/edit_text_box"
                 android:visibility="gone"
-                android:id="@+id/date_of_birth_tv"
+                android:id="@+id/text_view_1"
                 android:layout_weight="10"
                 android:layout_width="0dp"
                 android:layout_height="40dp"
@@ -178,7 +164,7 @@
                 android:textColor="#000000"/>
             <ImageView
                 android:background="@drawable/edit_text_box"
-                android:id="@+id/date_of_birth_btn_iv"
+                android:id="@+id/image_view_0"
                 android:contentDescription="@string/Date_Of_Birth"
                 android:layout_weight="1"
                 android:layout_width="25dp"
@@ -199,7 +185,7 @@
             android:orientation="horizontal">
 
             <EditText
-                android:id="@+id/address_et"
+                android:id="@+id/edit_text_4"
                 android:visibility="gone"
                 android:autofillHints="@string/example_address"
                 android:background="@drawable/edit_text_box"
@@ -215,7 +201,7 @@
                 android:textColor="#000000" tools:targetApi="o"/>
             <ImageView
                 android:background="@drawable/edit_text_box"
-                android:id="@+id/address_btn_iv"
+                android:id="@+id/image_view_1"
                 android:contentDescription="@string/Date_Of_Birth"
                 android:layout_weight="1"
                 android:layout_width="25dp"
@@ -236,20 +222,19 @@
                 android:textColor="#000000"
                 android:textSize="20sp"/>
             <RadioGroup
-                android:id="@+id/radio_group"
+                android:id="@+id/radio_group_0"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <RadioButton
-                    android:id="@+id/male_rbtn"
+                    android:id="@+id/radio_button_0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:checked="true"
                     android:text="@string/Male"
                     android:textSize="20sp" />
                 <RadioButton
-                    android:id="@+id/female_rbtn"
+                    android:id="@+id/radio_button_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="20sp"
@@ -258,7 +243,7 @@
         </LinearLayout>
         <Button
             android:background="@drawable/button_background_3"
-            android:id="@+id/save_btn"
+            android:id="@+id/button_0"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/Save"
