--- a/app/src/main/res/layouts/patient_layouts/layout/activity_edit_patient_secure_info.xml
+++ b/app/src/main/res/layouts/patient_layouts/layout/activity_edit_patient_secure_info.xml
@@ -13,10 +13,16 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/birth_certificate_hint_text_1"
+            android:text="@string/attention"
             android:textColor="@color/colorRed"
             android:gravity="center"
             android:textSize="20sp"/>
+
+        <View
+            android:layout_margin="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@color/colorRed"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -49,7 +55,8 @@
             android:id="@+id/image_view_0"
             android:layout_width="200dp"
             android:layout_height="200dp"
-            android:layout_gravity="center" />
+            android:layout_gravity="center"
+            android:src="@drawable/upload_doc_image"/>
         <Button
             android:background="@drawable/button_background_2"
             android:id="@+id/button_0"
@@ -71,6 +78,7 @@
                 android:textColor="@color/colorRed"
                 android:text="@string/another_document_hint_tv"/>
             <ImageView
+                android:src="@drawable/upload_doc_image"
                 android:id="@+id/image_view_1"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
@@ -91,7 +99,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
-            android:background="@drawable/button_background_1"
+            android:background="@drawable/button_background_3"
             android:id="@+id/button_2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
